--- a/src/style.css
+++ b/src/style.css
@@ -37,6 +37,9 @@
       --tw-drop-shadow-alpha: 100%;
       --tw-drop-shadow-size: initial;
       --tw-duration: initial;
+      --tw-scale-x: 1;
+      --tw-scale-y: 1;
+      --tw-scale-z: 1;
     }
   }
 }
@@ -79,6 +82,7 @@
     --color-primary: #F0EEDD;
     --color-dark: #162239;
     --color-dark2: #0C1228;
+    --color-bgcard: #565F6D;
   }
 }
 @layer base {
@@ -371,11 +375,35 @@
       max-width: 96rem;
     }
   }
+  .m-auto {
+    margin: auto;
+  }
   .mx-auto {
     margin-inline: auto;
   }
+  .mt-1 {
+    margin-top: calc(var(--spacing) * 1);
+  }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
+  }
+  .mt-4 {
+    margin-top: calc(var(--spacing) * 4);
+  }
+  .mt-5 {
+    margin-top: calc(var(--spacing) * 5);
+  }
+  .mt-7 {
+    margin-top: calc(var(--spacing) * 7);
+  }
+  .mt-10 {
+    margin-top: calc(var(--spacing) * 10);
+  }
+  .mt-11 {
+    margin-top: calc(var(--spacing) * 11);
+  }
+  .mt-12 {
+    margin-top: calc(var(--spacing) * 12);
   }
   .mt-\[27px\] {
     margin-top: 27px;
@@ -391,6 +419,9 @@
   }
   .mt-\[70px\] {
     margin-top: 70px;
+  }
+  .mt-\[80px\] {
+    margin-top: 80px;
   }
   .mb-14 {
     margin-bottom: calc(var(--spacing) * 14);
@@ -425,11 +456,17 @@
   .h-\[82px\] {
     height: 82px;
   }
+  .h-\[443px\] {
+    height: 443px;
+  }
   .h-\[604px\] {
     height: 604px;
   }
   .h-full {
     height: 100%;
+  }
+  .max-h-\[229px\] {
+    max-height: 229px;
   }
   .max-h-full {
     max-height: 100%;
@@ -451,6 +488,15 @@
   }
   .w-full {
     width: 100%;
+  }
+  .max-w-\[285px\] {
+    max-width: 285px;
+  }
+  .max-w-\[441px\] {
+    max-width: 441px;
+  }
+  .max-w-\[477px\] {
+    max-width: 477px;
   }
   .max-w-\[564px\] {
     max-width: 564px;
@@ -516,6 +562,66 @@
     --tw-translate-x: 100px;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
+  .-translate-y-1 {
+    --tw-translate-y: calc(var(--spacing) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-1\/2 {
+    --tw-translate-y: calc(calc(1/2 * 100%) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-\[0px\] {
+    --tw-translate-y: calc(0px * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-\[10px\] {
+    --tw-translate-y: calc(10px * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-\[30px\] {
+    --tw-translate-y: calc(30px * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-\[40px\] {
+    --tw-translate-y: calc(40px * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-\[50\%\] {
+    --tw-translate-y: calc(50% * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-\[50px\] {
+    --tw-translate-y: calc(50px * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-\[60px\] {
+    --tw-translate-y: calc(60px * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-\[70px\] {
+    --tw-translate-y: calc(70px * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-\[80px\] {
+    --tw-translate-y: calc(80px * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-\[100px\] {
+    --tw-translate-y: calc(100px * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-y-\[0px\] {
+    --tw-translate-y: 0px;
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-y-\[20px\] {
+    --tw-translate-y: 20px;
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-y-\[40px\] {
+    --tw-translate-y: 40px;
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
   .translate-y-\[50\%\] {
     --tw-translate-y: 50%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
@@ -528,6 +634,15 @@
   }
   .resize {
     resize: both;
+  }
+  .grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+  .grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
   .flex-col {
     flex-direction: column;
@@ -559,6 +674,12 @@
   .gap-\[30px\] {
     gap: 30px;
   }
+  .gap-\[60px\] {
+    gap: 60px;
+  }
+  .overflow-hidden {
+    overflow: hidden;
+  }
   .rounded-\[2px\] {
     border-radius: 2px;
   }
@@ -582,6 +703,12 @@
   .bg-\[\#D37657\] {
     background-color: #D37657;
   }
+  .bg-\[\#F7F3EB\] {
+    background-color: #F7F3EB;
+  }
+  .bg-bgcard {
+    background-color: var(--color-bgcard);
+  }
   .bg-primary {
     background-color: var(--color-primary);
   }
@@ -603,6 +730,9 @@
   .px-\[30px\] {
     padding-inline: 30px;
   }
+  .px-\[60px\] {
+    padding-inline: 60px;
+  }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
@@ -615,11 +745,26 @@
   .pt-\[35px\] {
     padding-top: 35px;
   }
+  .pt-\[40px\] {
+    padding-top: 40px;
+  }
+  .pt-\[50px\] {
+    padding-top: 50px;
+  }
   .pt-\[70px\] {
     padding-top: 70px;
   }
+  .pt-\[80px\] {
+    padding-top: 80px;
+  }
+  .pb-\[25px\] {
+    padding-bottom: 25px;
+  }
   .pb-\[30px\] {
     padding-bottom: 30px;
+  }
+  .pb-\[65px\] {
+    padding-bottom: 65px;
   }
   .pl-\[22\%\] {
     padding-left: 22%;
@@ -651,11 +796,20 @@
     font-size: var(--text-xs);
     line-height: 1;
   }
+  .text-\[11px\] {
+    font-size: 11px;
+  }
   .text-\[13px\] {
     font-size: 13px;
   }
   .text-\[18px\] {
     font-size: 18px;
+  }
+  .text-\[22px\] {
+    font-size: 22px;
+  }
+  .text-\[33px\] {
+    font-size: 33px;
   }
   .text-\[35px\] {
     font-size: 35px;
@@ -720,6 +874,16 @@
   .duration-200 {
     --tw-duration: 200ms;
     transition-duration: 200ms;
+  }
+  .hover\:scale-105 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-scale-x: 105%;
+        --tw-scale-y: 105%;
+        --tw-scale-z: 105%;
+        scale: var(--tw-scale-x) var(--tw-scale-y);
+      }
+    }
   }
   .hover\:border-4 {
     &:hover {
@@ -1159,6 +1323,11 @@
       font-size: 22px;
     }
   }
+  .md\:mt-3\.5 {
+    @media (width >= 48rem) {
+      margin-top: calc(var(--spacing) * 3.5);
+    }
+  }
   .md\:mt-\[50px\] {
     @media (width >= 48rem) {
       margin-top: 50px;
@@ -1173,6 +1342,16 @@
     @media (width >= 48rem) {
       --tw-translate-x: calc(calc(1/2 * 100%) * -1);
       translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
+  .md\:grid-cols-2 {
+    @media (width >= 48rem) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  .md\:gap-\[40px\] {
+    @media (width >= 48rem) {
+      gap: 40px;
     }
   }
   .md\:text-2xl {
@@ -1195,6 +1374,11 @@
   .md\:text-\[32px\] {
     @media (width >= 48rem) {
       font-size: 32px;
+    }
+  }
+  .lg\:mt-5 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * 5);
     }
   }
   .lg\:mt-\[70px\] {
@@ -1222,6 +1406,11 @@
       flex-direction: row;
     }
   }
+  .lg\:gap-\[60px\] {
+    @media (width >= 64rem) {
+      gap: 60px;
+    }
+  }
   .lg\:gap-\[113px\] {
     @media (width >= 64rem) {
       gap: 113px;
@@ -1235,6 +1424,21 @@
   .lg\:pt-\[70px\] {
     @media (width >= 64rem) {
       padding-top: 70px;
+    }
+  }
+  .lg\:pt-\[80px\] {
+    @media (width >= 64rem) {
+      padding-top: 80px;
+    }
+  }
+  .lg\:text-\[18px\] {
+    @media (width >= 64rem) {
+      font-size: 18px;
+    }
+  }
+  .lg\:text-\[33px\] {
+    @media (width >= 64rem) {
+      font-size: 33px;
     }
   }
   .lg\:text-\[35px\] {
@@ -1260,6 +1464,11 @@
   .dark\:bg-amber-950 {
     &:where(.dark, .dark *) {
       background-color: var(--color-amber-950);
+    }
+  }
+  .dark\:bg-bgcard {
+    &:where(.dark, .dark *) {
+      background-color: var(--color-bgcard);
     }
   }
   .dark\:bg-dark {
@@ -1476,4 +1685,19 @@ h1,h2,h3,h4,h5,h6,p,span {
 @property --tw-duration {
   syntax: "*";
   inherits: false;
+}
+@property --tw-scale-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
 }
