--- a/src/style.css
+++ b/src/style.css
@@ -57,9 +57,13 @@
     --color-red-500: oklch(63.7% 0.237 25.331);
     --color-orange-500: oklch(70.5% 0.213 47.604);
     --color-orange-950: oklch(26.6% 0.079 36.259);
+    --color-amber-200: oklch(92.4% 0.12 95.746);
+    --color-amber-300: oklch(87.9% 0.169 91.605);
     --color-amber-800: oklch(47.3% 0.137 46.201);
     --color-amber-950: oklch(27.9% 0.077 45.635);
     --color-sky-950: oklch(29.3% 0.066 243.157);
+    --color-blue-950: oklch(28.2% 0.091 267.935);
+    --color-indigo-950: oklch(25.7% 0.09 281.288);
     --color-violet-950: oklch(28.3% 0.141 291.089);
     --color-slate-900: oklch(20.8% 0.042 265.755);
     --color-black: #000;
@@ -69,6 +73,8 @@
     --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
+    --text-base: 1rem;
+    --text-base--line-height: calc(1.5 / 1);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
     --text-3xl: 1.875rem;
@@ -77,6 +83,7 @@
     --text-4xl--line-height: calc(2.5 / 2.25);
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
+    --radius-sm: 0.25rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
     --color-primary: #F0EEDD;
@@ -357,6 +364,33 @@
   .z-50 {
     z-index: 50;
   }
+  .col-span-1 {
+    grid-column: span 1 / span 1;
+  }
+  .col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+  .col-span-3 {
+    grid-column: span 3 / span 3;
+  }
+  .col-span-4 {
+    grid-column: span 4 / span 4;
+  }
+  .col-span-5 {
+    grid-column: span 5 / span 5;
+  }
+  .col-span-\[0\.5\] {
+    grid-column: span 0.5 / span 0.5;
+  }
+  .col-end-1 {
+    grid-column-end: 1;
+  }
+  .col-end-\[0\.5\] {
+    grid-column-end: 0.5;
+  }
+  .col-end-auto {
+    grid-column-end: auto;
+  }
   .container {
     width: 100%;
     @media (width >= 40rem) {
@@ -387,6 +421,9 @@
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
   }
+  .mt-3 {
+    margin-top: calc(var(--spacing) * 3);
+  }
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
   }
@@ -411,6 +448,9 @@
   .mt-\[30px\] {
     margin-top: 30px;
   }
+  .mt-\[33px\] {
+    margin-top: 33px;
+  }
   .mt-\[35px\] {
     margin-top: 35px;
   }
@@ -423,8 +463,17 @@
   .mt-\[80px\] {
     margin-top: 80px;
   }
+  .mb-2 {
+    margin-bottom: calc(var(--spacing) * 2);
+  }
+  .mb-2\.5 {
+    margin-bottom: calc(var(--spacing) * 2.5);
+  }
   .mb-14 {
     margin-bottom: calc(var(--spacing) * 14);
+  }
+  .mb-\[61px\] {
+    margin-bottom: 61px;
   }
   .block {
     display: block;
@@ -453,11 +502,17 @@
     width: calc(var(--spacing) * 10);
     height: calc(var(--spacing) * 10);
   }
+  .h-\[75px\] {
+    height: 75px;
+  }
   .h-\[82px\] {
     height: 82px;
   }
   .h-\[443px\] {
     height: 443px;
+  }
+  .h-\[480px\] {
+    height: 480px;
   }
   .h-\[604px\] {
     height: 604px;
@@ -467,6 +522,9 @@
   }
   .max-h-\[229px\] {
     max-height: 229px;
+  }
+  .max-h-\[480px\] {
+    max-height: 480px;
   }
   .max-h-full {
     max-height: 100%;
@@ -479,6 +537,9 @@
   }
   .min-h-\[340px\] {
     min-height: 340px;
+  }
+  .min-h-\[480px\] {
+    min-height: 480px;
   }
   .min-h-\[800px\] {
     min-height: 800px;
@@ -498,6 +559,9 @@
   .max-w-\[477px\] {
     max-width: 477px;
   }
+  .max-w-\[480px\] {
+    max-width: 480px;
+  }
   .max-w-\[564px\] {
     max-width: 564px;
   }
@@ -506,6 +570,18 @@
   }
   .max-w-full {
     max-width: 100%;
+  }
+  .min-w-\[480px\] {
+    min-width: 480px;
+  }
+  .flex-1 {
+    flex: 1;
+  }
+  .flex-1\/2 {
+    flex: calc(1/2 * 100%);
+  }
+  .flex-1\/3 {
+    flex: calc(1/3 * 100%);
   }
   .border-collapse {
     border-collapse: collapse;
@@ -641,11 +717,26 @@
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
+  .grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
   .grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
+  .grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+  .grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+  .grid-cols-8 {
+    grid-template-columns: repeat(8, minmax(0, 1fr));
+  }
   .flex-col {
     flex-direction: column;
+  }
+  .flex-wrap {
+    flex-wrap: wrap;
   }
   .place-content-center {
     place-content: center;
@@ -662,6 +753,15 @@
   .justify-center {
     justify-content: center;
   }
+  .gap-4 {
+    gap: calc(var(--spacing) * 4);
+  }
+  .gap-5 {
+    gap: calc(var(--spacing) * 5);
+  }
+  .gap-7 {
+    gap: calc(var(--spacing) * 7);
+  }
   .gap-8 {
     gap: calc(var(--spacing) * 8);
   }
@@ -677,6 +777,15 @@
   .gap-\[60px\] {
     gap: 60px;
   }
+  .gap-y-\[20px\] {
+    row-gap: 20px;
+  }
+  .gap-y-\[50px\] {
+    row-gap: 50px;
+  }
+  .gap-y-\[70px\] {
+    row-gap: 70px;
+  }
   .overflow-hidden {
     overflow: hidden;
   }
@@ -686,6 +795,13 @@
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
+  .rounded-sm {
+    border-radius: var(--radius-sm);
+  }
+  .rounded-b-sm {
+    border-bottom-right-radius: var(--radius-sm);
+    border-bottom-left-radius: var(--radius-sm);
+  }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
@@ -694,14 +810,26 @@
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 2px;
   }
+  .border-amber-200 {
+    border-color: var(--color-amber-200);
+  }
   .border-orange-500 {
     border-color: var(--color-orange-500);
+  }
+  .bg-\[\#6C674D\] {
+    background-color: #6C674D;
+  }
+  .bg-\[\#807C62\] {
+    background-color: #807C62;
   }
   .bg-\[\#C87B5E\] {
     background-color: #C87B5E;
   }
   .bg-\[\#D37657\] {
     background-color: #D37657;
+  }
+  .bg-\[\#F5F1E9\] {
+    background-color: #F5F1E9;
   }
   .bg-\[\#F7F3EB\] {
     background-color: #F7F3EB;
@@ -727,8 +855,14 @@
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
   }
+  .px-\[20px\] {
+    padding-inline: 20px;
+  }
   .px-\[30px\] {
     padding-inline: 30px;
+  }
+  .px-\[41px\] {
+    padding-inline: 41px;
   }
   .px-\[60px\] {
     padding-inline: 60px;
@@ -741,6 +875,15 @@
   }
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
+  }
+  .py-\[20px\] {
+    padding-block: 20px;
+  }
+  .py-\[41px\] {
+    padding-block: 41px;
+  }
+  .py-\[80px\] {
+    padding-block: 80px;
   }
   .pt-\[35px\] {
     padding-top: 35px;
@@ -775,6 +918,22 @@
   .text-2xl {
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
+  }
+  .text-base {
+    font-size: var(--text-base);
+    line-height: var(--tw-leading, var(--text-base--line-height));
+  }
+  .text-base\/8 {
+    font-size: var(--text-base);
+    line-height: calc(var(--spacing) * 8);
+  }
+  .text-base\/10 {
+    font-size: var(--text-base);
+    line-height: calc(var(--spacing) * 10);
+  }
+  .text-base\/12 {
+    font-size: var(--text-base);
+    line-height: calc(var(--spacing) * 12);
   }
   .text-sm {
     font-size: var(--text-sm);
@@ -829,6 +988,14 @@
     --tw-leading: calc(var(--spacing) * 5);
     line-height: calc(var(--spacing) * 5);
   }
+  .leading-6 {
+    --tw-leading: calc(var(--spacing) * 6);
+    line-height: calc(var(--spacing) * 6);
+  }
+  .leading-10 {
+    --tw-leading: calc(var(--spacing) * 10);
+    line-height: calc(var(--spacing) * 10);
+  }
   .leading-\[0\] {
     --tw-leading: 0;
     line-height: 0;
@@ -841,8 +1008,14 @@
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
   }
+  .text-\[\#4F463F\] {
+    color: #4F463F;
+  }
   .text-\[\#670A18\] {
     color: #670A18;
+  }
+  .text-\[\#35312E\] {
+    color: #35312E;
   }
   .text-white {
     color: var(--color-white);
@@ -852,6 +1025,9 @@
   }
   .underline {
     text-decoration-line: underline;
+  }
+  .opacity-60 {
+    opacity: 60%;
   }
   .outline {
     outline-style: var(--tw-outline-style);
@@ -890,6 +1066,20 @@
       @media (hover: hover) {
         border-style: var(--tw-border-style);
         border-width: 4px;
+      }
+    }
+  }
+  .hover\:bg-\[\#D37657\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #D37657;
+      }
+    }
+  }
+  .hover\:bg-amber-300 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-amber-300);
       }
     }
   }
@@ -1013,6 +1203,16 @@
   .max-\[1096px\]\:right-\[25\%\] {
     @media (width < 1096px) {
       right: 25%;
+    }
+  }
+  .max-\[1024px\]\:py-\[109px\] {
+    @media (width < 1024px) {
+      padding-block: 109px;
+    }
+  }
+  .max-\[1024px\]\:pt-\[109px\] {
+    @media (width < 1024px) {
+      padding-top: 109px;
     }
   }
   .max-\[960px\]\:left-\[3\%\] {
@@ -1211,6 +1411,11 @@
       font-weight: var(--font-weight-semibold);
     }
   }
+  .max-\[400px\]\:gap-3 {
+    @media (width < 400px) {
+      gap: calc(var(--spacing) * 3);
+    }
+  }
   .max-\[375px\]\:hidden {
     @media (width < 375px) {
       display: none;
@@ -1271,6 +1476,11 @@
       display: none;
     }
   }
+  .max-lg\:py-\[109px\] {
+    @media (width < 64rem) {
+      padding-block: 109px;
+    }
+  }
   .max-md\:static {
     @media (width < 48rem) {
       position: static;
@@ -1291,9 +1501,39 @@
       width: calc(var(--spacing) * 24);
     }
   }
+  .max-md\:py-\[70px\] {
+    @media (width < 48rem) {
+      padding-block: 70px;
+    }
+  }
   .max-md\:pl-4 {
     @media (width < 48rem) {
       padding-left: calc(var(--spacing) * 4);
+    }
+  }
+  .max-sm\:flex-col {
+    @media (width < 40rem) {
+      flex-direction: column;
+    }
+  }
+  .max-sm\:py-2 {
+    @media (width < 40rem) {
+      padding-block: calc(var(--spacing) * 2);
+    }
+  }
+  .max-sm\:py-4 {
+    @media (width < 40rem) {
+      padding-block: calc(var(--spacing) * 4);
+    }
+  }
+  .max-sm\:pt-2 {
+    @media (width < 40rem) {
+      padding-top: calc(var(--spacing) * 2);
+    }
+  }
+  .max-sm\:pb-2 {
+    @media (width < 40rem) {
+      padding-bottom: calc(var(--spacing) * 2);
     }
   }
   .min-\[450px\]\:text-sm {
@@ -1376,6 +1616,11 @@
       font-size: 32px;
     }
   }
+  .lg\:col-span-3 {
+    @media (width >= 64rem) {
+      grid-column: span 3 / span 3;
+    }
+  }
   .lg\:mt-5 {
     @media (width >= 64rem) {
       margin-top: calc(var(--spacing) * 5);
@@ -1396,9 +1641,24 @@
       min-height: 940px;
     }
   }
+  .lg\:flex-1\/2 {
+    @media (width >= 64rem) {
+      flex: calc(1/2 * 100%);
+    }
+  }
+  .lg\:grid-cols-3 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
   .lg\:grid-cols-4 {
     @media (width >= 64rem) {
       grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+  }
+  .lg\:grid-cols-6 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(6, minmax(0, 1fr));
     }
   }
   .lg\:flex-row {
@@ -1419,6 +1679,11 @@
   .lg\:gap-\[155px\] {
     @media (width >= 64rem) {
       gap: 155px;
+    }
+  }
+  .lg\:py-\[109px\] {
+    @media (width >= 64rem) {
+      padding-block: 109px;
     }
   }
   .lg\:pt-\[70px\] {
@@ -1461,6 +1726,11 @@
       display: none;
     }
   }
+  .dark\:bg-\[\#052F4A\] {
+    &:where(.dark, .dark *) {
+      background-color: #052F4A;
+    }
+  }
   .dark\:bg-amber-950 {
     &:where(.dark, .dark *) {
       background-color: var(--color-amber-950);
@@ -1469,6 +1739,11 @@
   .dark\:bg-bgcard {
     &:where(.dark, .dark *) {
       background-color: var(--color-bgcard);
+    }
+  }
+  .dark\:bg-blue-950 {
+    &:where(.dark, .dark *) {
+      background-color: var(--color-blue-950);
     }
   }
   .dark\:bg-dark {
@@ -1481,6 +1756,11 @@
       background-color: var(--color-dark2);
     }
   }
+  .dark\:bg-indigo-950 {
+    &:where(.dark, .dark *) {
+      background-color: var(--color-indigo-950);
+    }
+  }
   .dark\:bg-sky-950 {
     &:where(.dark, .dark *) {
       background-color: var(--color-sky-950);
@@ -1489,6 +1769,11 @@
   .dark\:bg-violet-950 {
     &:where(.dark, .dark *) {
       background-color: var(--color-violet-950);
+    }
+  }
+  .dark\:text-black {
+    &:where(.dark, .dark *) {
+      color: var(--color-black);
     }
   }
   .dark\:text-white {
