fix text w and...

--- a/src/style.css
+++ b/src/style.css
@@ -786,6 +786,9 @@
   .gap-y-\[70px\] {
     row-gap: 70px;
   }
+  .gap-y-\[100px\] {
+    row-gap: 100px;
+  }
   .overflow-hidden {
     overflow: hidden;
   }
@@ -1509,6 +1512,11 @@
   .max-md\:pl-4 {
     @media (width < 48rem) {
       padding-left: calc(var(--spacing) * 4);
+    }
+  }
+  .max-sm\:max-w-\[300px\] {
+    @media (width < 40rem) {
+      max-width: 300px;
     }
   }
   .max-sm\:flex-col {
